[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evtours"
classifiers = ["Private :: Do Not Upload"]
version = "0.1.0"
dependencies = ["fastapi[all]", "cattrs", "mangum", "boto3", "structlog"]
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "black", "botocore-stubs[ssm]", "boto3-stubs[ssm]"]
